--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,11 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: _book
+ 
 
