--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,9 @@ jobs:
     - run: npm test
     - run: npm run build --if-present
     - name: Deploy
-      uses: actions/setup-node@v1
+      uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: _book
  
