--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: "10.x"
     - run: npm ci
     - run: npm test
-    - run: npm run build --if-present
+    - run: npx ng build --base-href /dojo/
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
